# qwen3-tts-cpp

./: .gitignore  .gitmodules  LICENSE  README.md
cpp/: CMakeLists.txt  build.ps1  convert_qwen3_to_gguf.py  main.cpp  qwen3_audio_decoder.cpp  qwen3_audio_decoder.h  qwen3_common.cpp  qwen3_talker.cpp  qwen3_talker.h  qwen3_talker_llm.cpp  qwen3_talker_llm.h
docs/: analysis_qwen3_tts_pipeline.md  asr_reuse_deep_dive.md  development_plan.md  session_summary_decoder_functional.md  session_summary_decoder_talker_impl.md  session_summary_talker_llm_integration.md  technical_notes.md
tools/: inspect_gguf.py  inspect_model_keys.py
